--- a/public/index.html
+++ b/public/index.html
@@ -5,11 +5,11 @@
 		<link rel="icon" href="%PUBLIC_URL%/notes.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta name="theme-color" content="#000000" />
-		<meta name="description" content="Nightly Notes created by Muhammad Zakariya" />
+		<meta name="description" content="Notes" />
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=Roboto&family=Sacramento&family=Space+Mono&family=Hi+Melody&family=Major+Mono+Display&family=Montserrat&family=Poppins&family=Raleway&display=swap" rel="stylesheet">
-		<title>Nightly Notes</title>
+		<title> Notes</title>
 	</head>
 	<body>
 		<noscript>You need to enable JavaScript to run this app.</noscript>
